# customer-churn

./: .gitignore  README.md  cli.py  pyproject.toml
.github/workflows/: docker-image.yml
configs/: hypsearch_conf.yaml
deployment/: Dockerfile  client.py  docker-compose.yaml  launch.bat
deployment/app/: app.py  requirements.txt
notebooks/: EDA.ows  exploration.ipynb
src/churnee/: configs.py  inference.py  models.py  preprocess.py  utils.py
tests/: inference.py  model_selection.py  train.py
