[project]
name = "churnee"
version = "0.1.0"
description = "customer churn prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feature-engine>=1.8.3",
    "fire>=0.7.0",
    "litserve>=0.2.12",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.3.0",
    "optuna>=4.3.0",
    "optuna-dashboard>=0.18.0",
    "optuna-integration[sklearn]>=4.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]
